[Add ThirdPartyAPI to config file

--- a/src/config.json
+++ b/src/config.json
@@ -10,5 +10,9 @@
       "level": "INFO",
       "format": "%(asctime)s - %(name)s - %(levelname)s - %(message)s",
       "file_path": "../COTC_PROJECT/src/logs/app.log"
+    },
+
+    "third_party_api": {
+      "url": "https://api.openweathermap.org/data/2.5/weather?lat=41.8719&lon=12.5674&appid=fa728ee9341a1745cc22a7d6478a18b7&units=metric"
     }
   }
