[Fix] Split up 3rd party api params

--- a/src/config.json
+++ b/src/config.json
@@ -15,7 +15,13 @@
 
     "third_party_api": {
       "name": "Open Weather Map",
-      "url": "https://api.openweathermap.org/data/2.5/weather?lat=41.8719&lon=12.5674&appid=fa728ee9341a1745cc22a7d6478a18b7&units=metric",
+      "url": "https://api.openweathermap.org/data/2.5/weather?",
+      "params": {
+        "lat": "41.8719",
+        "lon": "12.5674",
+        "appid": "fa728ee9341a1745cc22a7d6478a18b7",
+        "units": "metric"
+      },
       "cache_timeout_m": 0.1
     },
 
